[package]
name = "consul-rs-plus"
version = "0.1.0"
authors = ["halokid <r00txxyyzz@gmail.com>"]
edition = "2018"
description = "A plus consul client package for Rust, more functions for micro service."
license = "Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.10.0"
reqwest = "0.9.4"


