[package]
name = "consul-rs-plus"
version = "0.1.3"
authors = ["halokid <r00txxyyzz@gmail.com>"]
edition = "2018"
description = "A plus consul client package for Rust, more functions for micro service."
documentation = "https://github.com/halokid/consul-rs-plus"
repository = "https://github.com/halokid/consul-rs-plus"
license = "MIT/Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.10.0"
reqwest = "0.9.4"
lazy_static = "1.4.0"


